SWE-364: Remove name and email address options.

--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/base.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/base.html
@@ -21,7 +21,7 @@
   <meta name="description"
         content="{% endraw %}{{ cookiecutter.description }}{% raw %}" />
   <meta name="author"
-        content="{% endraw %}{{ cookiecutter.author_name }}{% raw %}" />
+        content="{% endraw %}MyMarky, Incorporated{% raw %}" />
   <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}" />
   {% block css %}
   {%- endraw %}
