Make template raw.

--- a/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/account/password_reset_from_key_done.html
+++ b/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/account/password_reset_from_key_done.html
@@ -1,4 +1,4 @@
-{% extends "account/base_entrance.html" %}
+{% raw %}{% extends "account/base_entrance.html" %}
 {% load i18n %}
 {% load allauth %}
 {% block head_title %}
@@ -13,3 +13,4 @@
   {% endelement %}
   <a href="{% url 'home' %}">Go Home</a>
 {% endblock content %}
+{% endraw %}
