Make Ruff happy?

--- a/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/account/base_manage_password.html
+++ b/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/account/base_manage_password.html
@@ -1,4 +1,5 @@
-{% raw %}{% extends "account/base_manage.html" %}
+{% raw -%}
+{% extends "account/base_manage.html" %}
 
 {% block main %}
   <div class="card">
@@ -7,5 +8,6 @@
       {% endblock content %}
     </div>
   </div>
-{% endblock main %}{% endraw %}
+{% endblock main %}
+{% endraw -%}
 
