--- a/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/403.html
+++ b/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/403.html
@@ -1,6 +1,9 @@
 {% raw %}{% extends "base.html" %}
 
-{% block title %}Forbidden (403){% endblock title %}
+{% block title %}
+  Forbidden (403)
+{% endblock title %}
+
 {% block content %}
   <h1>Forbidden (403)</h1>
   <p>
