--- a/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/404.html
+++ b/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/404.html
@@ -1,6 +1,9 @@
 {% raw %}{% extends "base.html" %}
 
-{% block title %}Page not found{% endblock title %}
+{% block title %}
+  Page not found
+{% endblock title %}
+
 {% block content %}
   <h1>Page not found</h1>
   <p>
