--- a/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/account/password_reset_from_key_done.html
+++ b/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/account/password_reset_from_key_done.html
@@ -1,16 +1,21 @@
-{% raw %}{% extends "account/base_entrance.html" %}
+{% raw -%}
+{% extends "account/base_entrance.html" %}
 {% load i18n %}
 {% load allauth %}
+
 {% block head_title %}
   {% trans "Change Password" %}
 {% endblock head_title %}
+
 {% block content %}
   {% element h1 %}
     {% trans "Change Password" %}
   {% endelement %}
+
   {% element p %}
     {% trans 'Your password is now changed.' %}
   {% endelement %}
+
   <a href="{% url 'home' %}">Go Home</a>
 {% endblock content %}
-{% endraw %}
+{% endraw -%}
