--- a/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/allauth/layouts/entrance.html
+++ b/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/allauth/layouts/entrance.html
@@ -1,13 +1,21 @@
-{% raw %}{% extends "base.html" %}
+{% raw -%}
+{% extends "base.html" %}
 {% load i18n %}
-{% block bodyclass %}bg-light{% endblock bodyclass %}
 
-{% block css %}{{ block.super }}{% endblock css %}
+{% block bodyclass %}
+  bg-light
+{% endblock bodyclass %}
+
+{% block css %}
+  {{ block.super }}
+{% endblock css %}
+
 {% block title %}
   {% block head_title %}
     {% trans "Sign In" %}
   {% endblock head_title %}
 {% endblock title %}
+
 {% block body %}
   <div class="d-flex justify-content-center h-100 py-4">
     <div class="col-md-4 py-4 my-4 px-4">
@@ -28,4 +36,5 @@
       {% endblock extra_body %}
     </div>
   </div>
-{% endblock body %}{% endraw %}
+{% endblock body %}
+{% endraw -%}
