Make Ruff happy?

--- a/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/users/user_form.html
+++ b/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/users/user_form.html
@@ -21,11 +21,11 @@
   <h1>
   {%- endraw %}
   {%- if cookiecutter.username_type == "email" %}
-    {%- raw %}
+    {%- raw -%}
     {{ user.name }}
     {%- endraw %}
   {%- else %}
-    {%- raw %}
+    {%- raw -%}
     {{ user.username }}
     {%- endraw %}
   {%- endif %}
