--- a/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/base.html
+++ b/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/base.html
@@ -27,10 +27,8 @@
       {% endblock title %}
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description"
-          content="{% endraw %}{{ cookiecutter.description }}{% raw %}" />
-    <meta name="author"
-          content="{% endraw %}MyMarky, Incorporated{% raw %}" />
+    <meta name="description" content="{% endraw %}{{ cookiecutter.description }}{% raw %}" />
+    <meta name="author" content="{% endraw %}MyMarky, Incorporated{% raw %}" />
     <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}" />
     {% block css %}
 {%- endraw %}
