--- a/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/users/user_detail.html
+++ b/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/users/user_detail.html
@@ -18,18 +18,16 @@
     <div class="row">
       <div class="col-sm-12">
         <h2>
-          {% endraw -%}
+          {%- endraw -%}
           {% if cookiecutter.username_type == "email" -%}
             {% raw -%}{{ object.name }}{% endraw -%}
           {% else -%}
             {% raw -%}{{ object.username }}{% endraw -%}
-          {% endif %}
+          {% endif -%}
         </h2>
         {% if cookiecutter.username_type == "username" -%}
         {% raw -%}
-        {% if object.name -%}
-          <p>{{ object.name }}</p>
-        {%- endif %}
+        {% if object.name %}<p>{{ object.name }}</p>{% endif %}
         {%- endraw %}
         {%- endif %}
       </div>
