Make Ruff happy?

--- a/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/users/user_detail.html
+++ b/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/users/user_detail.html
@@ -13,6 +13,7 @@
 {%- endif %}
 {%- raw %}
 {% endblock title %}
+
 {% block content %}
   <div class="container">
     <div class="row">
@@ -41,9 +42,7 @@
           <a class="btn btn-primary"
              href="{% url 'account_email' %}"
              role="button">E-Mail</a>
-          <a class="btn btn-primary"
-             href="{% url 'mfa_index' %}"
-             role="button">MFA</a>
+          <a class="btn btn-primary" href="{% url 'mfa_index' %}" role="button">MFA</a>
           <!-- Your Stuff: Custom user template urls -->
         </div>
       </div>
