--- a/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/users/user_form.html
+++ b/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/users/user_form.html
@@ -29,7 +29,7 @@
     {{ user.username }}
     {%- endraw %}
   {%- endif %}
-  {%- raw %}
+  {%- raw -%}
   </h1>
   <form class="form-horizontal"
         method="post"
