--- a/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/allauth/layouts/entrance.html
+++ b/{{cookiecutter.project_slug}}/app/{{cookiecutter.python_package_name}}/templates/allauth/layouts/entrance.html
@@ -14,7 +14,7 @@
 {% block title %}
   {% block head_title %}
     {% trans "Sign In" %}
-  {% endblock head_title %}q
+  {% endblock head_title %}
 {% endblock title %}
 
 {% block body %}
